--- a/varscan_somatic.cwl.yaml
+++ b/varscan_somatic.cwl.yaml
@@ -1,93 +1,93 @@
 cwlVersion: v1.0
 class: CommandLineTool
 label: VarScan Somatic
-baseCommand: ['python', '/opt/VarScanSomaticVcf.py']
+baseCommand: ["python", "/opt/VarScanSomaticVcf.py"]
 requirements:
-  - class: "DockerRequirement"
-    dockerPull: "opengenomics/varscan:latest"
+  - class: DockerRequirement
+    dockerPull: opengenomics/varscan:latest
 
 inputs:
-  - id: "normal_pileup"
+  - id: normal_pileup
     type: File
     inputBinding:
       position: 1
       
-  - id: "tumor_pileup"
+  - id: tumor_pileup
     type: File
     inputBinding:
       position: 2
   
-  - id: "min_coverage"
+  - id: min_coverage
     type: int
     default: 8
     inputBinding:
       prefix: --min-coverage
 
-  - id: "min_coverage_normal"
+  - id: min_coverage_normal
     type: int
     default: 8
     inputBinding:
       prefix: --min-coverage-normal
       
-  - id: "min_coverage_tumor"
+  - id: min_coverage_tumor
     type: int
     default: 6
     inputBinding:
       prefix: --min-coverage-tumor
       
-  - id: "min_var_freq"
+  - id: min_var_freq
     type: float
     default: 0.10
     inputBinding:
       prefix: --min-var-freq
 
-  - id: "min_freq_for_hom"
+  - id: min_freq_for_hom
     type: float
     default: 0.75
     inputBinding:
       prefix: --min-freq-for-hom
       
-  - id: "normal_purity"
+  - id: normal_purity
     type: float
     default: 1.00
     inputBinding:
       prefix: --normal-purity
 
-  - id: "tumor_purity"
+  - id: tumor_purity
     type: float
     default: 1.00
     inputBinding:
       prefix: --tumor-purity
       
-  - id: "p_value"
+  - id: p_value
     type: float
     default: 0.99
     inputBinding:
       prefix: --p-value
       
-  - id: "somatic_p_value"
+  - id: somatic_p_value
     type: float
     default: 0.05
     inputBinding:
       prefix: --somatic-p-value
 
-  - id: "strand_filter"
-    type: ["null", "int"]
+  - id: strand_filter
+    type: int?
     inputBinding:
       prefix: --strand-filter
 
-  - id: "validation"
-    type: ["null", "int"]
+  - id: validation
+    type: int?
     inputBinding:
       prefix: --validation
       
 outputs:
-  - id: "snp_vcf"
+  - id: snp_vcf
     type: File
     outputBinding:
       glob: varscan.snp.vcf
         
-  - id: "indel_vcf"
+  - id: indel_vcf
     type: File
     outputBinding:
       glob: varscan.indel.vcf
